initial mail imap setting to appsetting

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -4,5 +4,13 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "MailSetting": {
+    "Gmail": {
+      "Email": "mint.colorfuls@gmail.com",
+      "Password": "kwln gczz nmvf uzoj",
+      "HostImap": "imap.gmail.com",
+      "PortImap": "993"
+    }
   }
 }
