--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MailSetting": {
+    "Gmail": {
+      "Email": "mint.colorfuls@gmail.com",
+      "Password": "kwln gczz nmvf uzoj",
+      "HostImap": "imap.gmail.com",
+      "PortImap": "993"
+    }
+  }
 }
