add ImapGmail model and setting for read from configuration

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -7,10 +7,12 @@
   },
   "MailSetting": {
     "Gmail": {
-      "Email": "mint.colorfuls@gmail.com",
-      "Password": "kwln gczz nmvf uzoj",
-      "HostImap": "imap.gmail.com",
-      "PortImap": "993"
+      "Imap": {
+        "Email": "mint.colorfuls@gmail.com",
+        "Password": "kwln gczz nmvf uzoj",
+        "Host": "imap.gmail.com",
+        "Port": "993"
+      }
     }
   }
 }
