--- a/appsettings.json
+++ b/appsettings.json
@@ -8,10 +8,12 @@
   "AllowedHosts": "*",
   "MailSetting": {
     "Gmail": {
-      "Email": "mint.colorfuls@gmail.com",
-      "Password": "kwln gczz nmvf uzoj",
-      "HostImap": "imap.gmail.com",
-      "PortImap": "993"
+      "Imap": {
+        "Email": "mint.colorfuls@gmail.com",
+        "Password": "kwln gczz nmvf uzoj",
+        "Host": "imap.gmail.com",
+        "Port": "993"
+      }
     }
   }
 }
