add RecurringJob for fetch new reply

--- a/appsettings.json
+++ b/appsettings.json
@@ -15,5 +15,10 @@
         "Port": "993"
       }
     }
+  },
+  "HangfireSetup": {
+    "ConnectionString": {
+      "Default": "Data Source=Data\\Hangfire\\hangfire.db;"
+    }
   }
 }
