add smtp zimbra setting

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -11,7 +11,15 @@
         "Email": "mint.colorfuls@gmail.com",
         "Password": "kwln gczz nmvf uzoj",
         "Host": "imap.gmail.com",
-        "Port": "993"
+        "Port": 993
+      }
+    },
+    "Zimbra": {
+      "Smtp": {
+        "Email": "paymentinsurance@tqm.co.th",
+        "Password": "Payment@2024",
+        "Host": "mail.tqm.co.th",
+        "Port": 587
       }
     }
   }
