add fetch zimbra mail

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -20,6 +20,12 @@
         "Password": "Payment@2024",
         "Host": "mail.tqm.co.th",
         "Port": 587
+      },
+      "Imap": {
+        "Email": "paymentinsurance@tqm.co.th",
+        "Password": "Payment@2024",
+        "Host": "mail.tqm.co.th",
+        "Port": 993
       }
     }
   }
